# mexTrace

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: ConsolePrinter.h  ErrorHandling.h  PlatformUtils.h  StackFrame.h  StackTrace.h  SymbolReceiver.h  SymbolResolver.h  UnixSymbolReceiver.h  UnixSymbolResolver.h  WindowsSymbolResolver.h
src/: ConsolePrinter.cpp  PlatformUtils.cpp  StackFrame.cpp  StackTrace.cpp  SymbolResolver.cpp  UnixSymbolReceiver.cpp  UnixSymbolResolver.cpp  WindowsSymbolResolver.cpp  mexTrace.cpp
